Updated for company registration and admin confguration
